instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:3: error: not found: type blue
setCouleurBrosse(c:blue)
                   ^InstructionsDrawG:3: error: not found: value c
setCouleurBrosse(c:blue)
                 ^InstructionsDrawG:5: error: not found: type int
var i : int=0
        ^InstructionsDrawG:10: error: not found: type int
var i2 : int=0
         ^InstructionsDrawG:15: error: not found: type int
var i3 : int=0
         ^InstructionsDrawG:20: error: not found: type int
var i4 : int=0
         ^