instructions.InstructionsDrawG.scala.code

gauche()
setCouleurBrosse(c:blue)
baisseBrosse()
var i : int=0
for(i <- 0 to 4)
	avance()

gauche()
var i2 : int=0
for(i2 <- 0 to 4)
	avance()

gauche()
var i3 : int=0
for(i3 <- 0 to 4)
	avance()

gauche()
var i4 : int=0
for(i4 <- 0 to 2)
	avance()

gauche()
avance()
leveBrosse()

droite()
avance()
avance()
droite()
avance()